@@ -1,6 +1,5 @@
 {
    "analytics": "UA-XXXXXXXX-XX",
-   "description": "An Easy Way To Document A Project Using Markdown",
    "float": true,
    "font": "http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100",
    "links": {
