@@ -5,14 +5,14 @@
             [% config.title %]</a>
 [% hint  = loc( 'Hint' ) -%]
 [% IF prefs.use_flags -%]
-[%    title = loc( 'National flag of current the language' ) -%]
+[%    title = loc( 'National flag of requested the language' ) -%]
          <div class="flag-container pull-right tips"
               title="[% hint _ ' ~ ' _ title %]">
-            <span class="flag_[% page.language %]"></span></div>
+            <span class="flag_[% req.language %]"></span></div>
 [% ELSE -%]
-[%    title = loc( 'Current prefered language' ) -%]
+[%    title = loc( 'Requested language' ) -%]
          <div class="flag-container pull-right tips"
-              title="[% hint _ ' ~ ' _ title %]">[% page.language %]</div>
+              title="[% hint _ ' ~ ' _ title %]">[% req.language %]</div>
 [% END -%]
 [%    title = loc( 'Help pages for the application' ) -%]
          <p class="navbar-text pull-right">[% loc( 'Generated by' ) %]
